<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.expensefragments.add.AddFragment">

    <EditText
        android:id="@+id/expense_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/expense_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableEnd="@drawable/label_icon"/>

    <EditText
        android:id="@+id/expense_amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:inputType="numberDecimal"
        android:hint="@string/expense_amount_hint"
        app:layout_constraintTop_toBottomOf="@id/expense_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableEnd="@drawable/money_icon" />

    <EditText
        android:id="@+id/expense_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/expense_description_hint"
        android:inputType="textMultiLine"
        android:maxHeight="100dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_amount_edit_text"
        android:drawableEnd="@drawable/description_icon"/>

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/add_expense_button"
        android:backgroundTint="@color/main_color"
        app:layout_constraintTop_toBottomOf="@id/expense_description_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>