<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_root">

    <LinearLayout
        android:id="@+id/list_item_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="">

        <TextView
            android:id="@+id/list_item_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_item_name"
            android:textColor="@color/list_item_text_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/list_item_amount_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_item_amount"
            android:textColor="@color/list_item_text_color"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/list_item_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_item_description"
            android:textColor="@color/list_item_text_color"
            android:textSize="18sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_item_text_color"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/list_item_view_group"/>

</androidx.constraintlayout.widget.ConstraintLayout>